[metadata]
name = %%name%%
version = %%version%%
summary = %%description%%
description-file =
    README.rst
    CHANGELOG.rst
requires-dist =
    cachetools

## sdist info
author = %%author%%
author_email = %%email%%
home_page = http://github.com/0k/%%name%%
classifier =
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Topic :: Software Development
    Intended Audience :: Developers

[files]
packages-root = src
packages =
    kids
    %%name%%
package-data = kids =
extra_files =
    README.rst
    CHANGELOG.rst
    setup.py

# [entry_points]
# console_scripts =
#     cmd1 = %%name%%.example:run

[nosetests]
verbosity=3
with-doctest=1
doctest-extension=rst
exe=1
with-coverage=1
cover-package=kids.cache
cover-min-percentage=90
#doctest-options='+ELLIPSIS,+NORMALIZE_WHITESPACE'
