[metadata]
name = %%name%%
version = %%version%%
summary = %%description%%
description-file =
    README.rst
    CHANGELOG.rst
license_file = LICENSE
requires-dist =


## sdist info
author = %%author%%
author_email = %%email%%
home_page = http://github.com/0k/%%name%%
classifier =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Topic :: Software Development
    Intended Audience :: Developers

[files]
packages-root = src
packages =
    kids
    %%name%%
package-data = kids =
extra_files =
    README.rst
    CHANGELOG.rst
    setup.py

# [entry_points]
# console_scripts =
#     cmd1 = %%name%%.example:run


[backwards_compat]
## without this ``pip uninstall`` fails on recent version of setuptools
## (tested failing with setuptools 34.3.3, working with setuptools 9.1)
zip-safe = False


[bdist_wheel]
universal = 1


[nosetests]
verbosity = 3
with-doctest = 1
doctest-extension = rst
exe = 1
with-coverage = 1
cover-package = kids.cache
cover-min-percentage = 100
doctest-options = +ELLIPSIS,+NORMALIZE_WHITESPACE
